--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+{
+ "version":"2.24.8.85",
+ "title":"🚨 UPDATE WA Business Lite📣",
+ "description":"🚨 Added New Backup Option And many more  ",
+ "download":"https://mrmods07official.blogspot.com"
+}
